# Ticket-System-2026

./: .gitignore  CMakeLists.txt
include/buffer/: buffer_pool_manager.h  replacer.h
include/common/: config.h  exception.h
include/disk/: disk_manager.h  disk_scheduler.h  log_manager.h
include/index/: b_plus_tree.h
include/page/: b_plus_tree_internal_page.h  b_plus_tree_leaf_page.h  b_plus_tree_page.h  page_guard.h
include/type/: type.hpp
lib/deque/: deque.hpp
lib/shared_ptr/: shared_ptr.hpp
lib/vector/: vector.hpp
src/: CMakeLists.txt  main.cpp
src/buffer/: CMakeLists.txt  buffer_pool_manager.cpp  replacer.cpp
src/disk/: CMakeLists.txt  disk_manager.cpp  disk_scheduler.cpp  log_manager.cpp
src/index/: CMakeLists.txt  b_plus_tree.cpp
src/page/: CMakeLists.txt  b_plus_tree_internal_page.cpp  b_plus_tree_leaf_page.cpp  b_plus_tree_page.cpp  page_guard.cpp
test/: CMakeLists.txt  test.cpp
